// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer renders a horizontal spacer when \`horizontal\` is true 1`] = `
<View
  style={
    {
      "height": 0,
      "width": 12,
    }
  }
  testID="spacer"
/>
`;

exports[`Spacer renders a vertical spacer (default) 1`] = `
<View
  style={
    {
      "height": 8,
      "width": 0,
    }
  }
  testID="spacer"
/>
`;
